restructured project; added some new assets for rick, portal; skeleton of garage scene without animation

--- a/RickButton/App.xaml
+++ b/RickButton/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Button.App"
+﻿<Application x:Class="RickButton.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Button"
+             xmlns:local="clr-namespace:RickButton"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
