--- a/Button/MainWindow.xaml
+++ b/Button/MainWindow.xaml
@@ -6,7 +6,5 @@
         xmlns:local="clr-namespace:Button"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+    <Grid Margin="0,0,3.6,-4.918"/>
 </Window>
