--- a/RickButton/MainWindow.xaml
+++ b/RickButton/MainWindow.xaml
@@ -9,33 +9,40 @@
     <Window.Resources>
         <Storyboard x:Key="OnMouseLeftButtonUp1">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="image1">
-                <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="1"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="0"/>
                 <EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="1"/>
                 <EasingDoubleKeyFrame KeyTime="0:0:0.6" Value="1"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.8" Value="1"/>
             </DoubleAnimationUsingKeyFrames>
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="image2">
-                <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="0"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="1"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="0"/>
             </DoubleAnimationUsingKeyFrames>
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="image1">
                 <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="0"/>
-                <EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="-112"/>
-                <EasingDoubleKeyFrame KeyTime="0:0:0.6" Value="-206"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="0"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.6" Value="-112"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.8" Value="-208"/>
             </DoubleAnimationUsingKeyFrames>
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="image1">
                 <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="0"/>
-                <EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="-20"/>
-                <EasingDoubleKeyFrame KeyTime="0:0:0.6" Value="90"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="0"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.6" Value="-20"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.8" Value="52"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="image">
+                <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="1"/>
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
     </Window.Resources>
     <Window.Triggers>
-        <EventTrigger RoutedEvent="UIElement.MouseLeftButtonUp" SourceName="image">
+        <EventTrigger RoutedEvent="UIElement.MouseLeftButtonUp" SourceName="image3">
             <BeginStoryboard Storyboard="{StaticResource OnMouseLeftButtonUp1}"/>
         </EventTrigger>
     </Window.Triggers>
     <Grid>
         <Image Margin="-34,-62.625,-42,-56.375" Source="garage.jpg" Stretch="Fill"/>
-        <Image x:Name="image" Margin="10,0,651.375,10" Source="portal1.png" Stretch="Fill"/>
+        <Image x:Name="image" Margin="10,10,651.375,10" Source="portal1.png" Stretch="Fill" Opacity="0"/>
         <Image x:Name="image2" Margin="201.5,51.409,365.033,0" Source="rick1.png" Stretch="Fill"/>
         <Image x:Name="image1" Margin="164.625,-20.625,341.033,100" Source="rick2.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5" Opacity="0">
             <Image.RenderTransform>
@@ -47,6 +54,7 @@
                 </TransformGroup>
             </Image.RenderTransform>
         </Image>
+        <Image x:Name="image3" Margin="681,299,0,10" Source="portalbutton.png" Stretch="Fill"/>
 
     </Grid>
 </Window>
